--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,32 +37,26 @@ if (MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /D _CRT_NONSTDC_NO_WARNINGS=1 /D _CRT_SECURE_NO_WARNINGS=1")
 endif ()
 
-
-if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")     ## (not debug)
-    if(CMAKE_COMPILER_IS_GNUCXX)              ## (GNU COMMAND)
-        add_compile_options("-O3")            ### No Optimization
-        set(CMAKE_EXE_LINKER_FLAGS "-s")      ### Strip binary (only in release mode)
-    endif ()
-else ()
-    add_compile_options("-g")
+if (LINUX)
+	if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")     ## (not debug)
+		if(CMAKE_COMPILER_IS_GNUCXX)              ## (GNU COMMAND)
+			add_compile_options("-O3")            ### No Optimization
+			set(CMAKE_EXE_LINKER_FLAGS "-s")      ### Strip binary (only in release mode)
+		endif ()
+	else ()
+		add_compile_options("-g")
+	endif ()
 endif ()
 
 if (UNIX)
     add_compile_options("-std=gnu99" "-pthread" "-ldl")
+	add_compile_options("-Wall" "-pedantic" "-fno-builtin")
 elseif (WIN32)
     #add_compile_options("std=c99" "lkernel32" "lntdll")
     if (CMAKE_BUILD_TYPE STREQUAL "Debug")
         add_compile_options("static-libgcc" "ggdb")
     endif ()
 	set(CMAKE_C_FLAGS "${CMAKE_ENABLE_C99}")
-else ()
-    add_compile_options("-std=c99")
-endif ()
-
-if (UNIX)
-	add_compile_options("-Wall" "-pedantic" "-fno-builtin")
-elseif (WIN32)
-	#add_compile_options("Wall" "pedantic" "fno-builtin")
 endif ()
 
 if (WIN32)
