Don't prefix Windows lib with 'lib' string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ cmake_minimum_required(VERSION 3.8)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
 set(BUILD_EXAMPLE on)
+set(CMAKE_STATIC_LIBRARY_PREFIX "")
 
 # --- PATH ---
 
