--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,36 +117,23 @@ target_link_libraries(${PROJECT_NAME_STATIC} ${CMAKE_THREAD_LIBS_INIT})
 
 # --- INSTALL ---
 
+# Copy includes
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include FILES_MATCHING PATTERN "*.h")
+
+# Copy static library
+install (
+	TARGETS ${PROJECT_NAME_STATIC}
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+)
+
 if (UNIX)
-    # Copy includes
-    #install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/ DESTINATION /usr/include FILES_MATCHING PATTERN "*.h")
-
-    # Copy static library
-    #install (TARGETS ${PROJECT_NAME_STATIC} ARCHIVE DESTINATION "/usr/lib")
-
-    # Copy shared library
-    #install (TARGETS ${PROJECT_NAME_SHARED} LIBRARY DESTINATION "/usr/lib")
-
-    # Copy includes
-    install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include FILES_MATCHING PATTERN "*.h")
-
-	# Copy static library
 	install (
-		TARGETS ${PROJECT_NAME_STATIC}
-		ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+		TARGETS ${PROJECT_NAME_SHARED}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+		RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 	)
 elseif (WIN32)
-	# Copy includes
-    install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include FILES_MATCHING PATTERN "*.h")
-
-	# Copy static library
-	install (
-		TARGETS ${PROJECT_NAME_STATIC}
-		ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-		LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-	)
-
 	install (
 		TARGETS ${PROJECT_NAME_SHARED}
 		RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
